tests/ui/traits/non_lifetime_binders/universe-error1.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/universe-error1.rs:2:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: Other<_>` is not satisfied
  --> $DIR/universe-error1.rs:17:11
   |
LL |     foo::<_>();
   |           ^ the trait `Other<_>` is not implemented for `T`
   |
note: required by a bound in `foo`
  --> $DIR/universe-error1.rs:14:15
   |
LL | fn foo<U: PointeeSized>()
   |    --- required by a bound in this function
LL | where
LL |     for<T> T: Other<U> {}
   |               ^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
